--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "add": "^2.0.6",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "lub": "^1.0.1-alpha.0",
     "sass": "^1.58.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "yarn": "^1.22.19"
   }
 }
