--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "firebase": "^9.17.2",
+    "@types/react-redux": "^7.1.25",
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
